# forager

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml  publish.yml  test.yml
dev/bench/: data.js
forager/: Env.py  ObjectStorage.py  colors.py  config.py  exceptions.py  grid.py  interface.py  logging.py  objects.py  observations.py  state.py
forager/_utils/: config.py  numba.py
forager/objects/: Flower.py  Wall.py
scripts/: publish.sh  run_tests.sh
tests/: test_Env.py  test_numba.py  test_observations.py
